# PROG3_exam_prep

./: .gitignore  CMakeLists.txt  README.md
Task_1/: Part_Base_Child.cpp  copilot_errors_explaination.md
Task_2/: MyClass.cpp
Task_3/: Player.cpp
Task_5/: Error.cpp  Point.cpp  main.cpp
