cmake_minimum_required(VERSION 3.17)
project(PROG3_exam_prep)

set(CMAKE_CXX_STANDARD 14)

add_executable(PROG3_exam_prep Task_1/Part_Base_Child.cpp
        Task_3/Player.cpp
        Task_2/MyClass.cpp
        Task_5/Error.cpp
        Task_5/Point.cpp
        Task_5/main.cpp
        Task_5/main.cpp
)
